Some more edits on EFT thread
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@285 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2008,3 +2008,205 @@
 	title = "DM@LHC 2014 proceedings",
 	note = "To appear",
 	}
+	
+	
+%%% All references for experimental searches
+
+%%%%%%%%%%%%%%%%monojet
+
+
+@article{Khachatryan:2014rra,
+	collaboration         = "CMS",
+	title          = "{Search for dark matter, extra dimensions, and
+	unparticles in monojet events in proton-proton collisions
+	at $\sqrt{s}$ = 8 TeV}",
+	collaboration  = "CMS",
+	year           = "2014",
+	eprint         = "1408.3583",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CMS-EXO-12-048, CERN-PH-EP-2014-164",
+	SLACcitation   = "%%CITATION = ARXIV:1408.3583;%%",
+}
+
+
+@article{CMS-PAS-B2G-13-004,
+	title         = "{Search for the Production of Dark Matter in Association
+	with Top Quark Pairs in the Di-lepton Final State in pp
+	collisions at $\sqrt{s} = 8$ TeV}",
+	institution   = "CERN",
+	collaboration = "CMS",
+	address       = "Geneva",
+	month         = "Jun",
+	year          = "2014",
+	note    = "\href{http://cds.cern.ch/record/1697173}{CMS-PAS-B2G-13-004}",
+	reportNumber  = "CMS-PAS-B2G-13-004",
+	url           = "http://cds.cern.ch/record/1697173",
+}
+
+%%%%%%%%%%%%%%%%EW models, experimental searches
+
+%%%ATLAS
+@article{Aad:2013oja,
+	title          = "{Search for dark matter in events with a hadronically
+	decaying W or Z boson and missing transverse momentum in
+	$pp$ collisions at $\sqrt{s} =$ 8 TeV with the ATLAS
+	detector}",
+	collaboration  = "ATLAS",
+	journal        = "Phys.Rev.Lett.",
+	number         = "4",
+	volume         = "112",
+	pages          = "041802",
+	doi            = "10.1103/PhysRevLett.112.041802",
+	year           = "2014",
+	eprint         = "1309.4017",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CERN-PH-EP-2013-158",
+	SLACcitation   = "%%CITATION = ARXIV:1309.4017;%%",
+}
+
+@article{Aad:2014vka,
+	title          = "{Search for dark matter in events with a Z boson and
+	missing transverse momentum in pp collisions at
+	$\sqrt{s}$=8 TeV with the ATLAS detector}",
+	collaboration  = "ATLAS",
+	journal        = "Phys.Rev.",
+	number         = "1",
+	volume         = "D90",
+	pages          = "012004",
+	doi            = "10.1103/PhysRevD.90.012004",
+	year           = "2014",
+	eprint         = "1404.0051",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CERN-PH-EP-2013-231",
+	SLACcitation   = "%%CITATION = ARXIV:1404.0051;%%",
+}
+
+
+
+@article{ATLAS:2014wra,
+	collaboration         = "ATLAS",
+	title          = "{Search for new particles in events with one lepton and
+	missing transverse momentum in $pp$ collisions at
+	$\sqrt{s}$ = 8 TeV with the ATLAS detector}",
+	journal        = "JHEP",
+	volume         = "1409",
+	pages          = "037",
+	doi            = "10.1007/JHEP09(2014)037",
+	year           = "2014",
+	eprint         = "1407.7494",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CERN-PH-EP-2014-139",
+	SLACcitation   = "%%CITATION = ARXIV:1407.7494;%%",
+}
+
+%%%CMS
+
+@article{Khachatryan:2014rwa,
+	title          = "{Search for new phenomena in monophoton final states in
+	proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
+	collaboration  = "CMS",
+	year           = "2014",
+	eprint         = "1410.8812",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CMS-EXO-12-047, CERN-PH-EP-2014-253",
+	SLACcitation   = "%%CITATION = ARXIV:1410.8812;%%",
+}
+
+@article{Khachatryan:2014tva,
+	collaboration  = "CMS",
+	title          = "{Search for physics beyond the standard model in final
+	states with a lepton and missing transverse energy in
+	proton-proton collisions at $\sqrt{s}$ = 8 TeV}",
+	collaboration  = "CMS",
+	year           = "2014",
+	eprint         = "1408.2745",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CMS-EXO-12-060, CERN-PH-EP-2014-176",
+	SLACcitation   = "%%CITATION = ARXIV:1408.2745;%%",
+}
+
+%%% ttbar+MET
+
+@article{Khachatryan:2015nua,
+	title          = "{Search for the production of dark matter in association
+	with top-quark pairs in the single-lepton final state in
+	proton-proton collisions at sqrt(s) = 8 TeV}",
+	collaboration  = "CMS",
+	year           = "2015",
+	eprint         = "1504.03198",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CMS-B2G-14-004, CERN-PH-EP-2015-087",
+	SLACcitation   = "%%CITATION = ARXIV:1504.03198;%%",
+}
+
+%%DM+HF
+
+@article{Aad:2014vea,
+	title          = "{Search for dark matter in events with heavy quarks and
+	missing transverse momentum in $pp$ collisions with the
+	ATLAS detector}",
+	collaboration  = "ATLAS",
+	journal        = "Eur.Phys.J.",
+	number         = "2",
+	volume         = "C75",
+	pages          = "92",
+	doi            = "10.1140/epjc/s10052-015-3306-z",
+	year           = "2015",
+	eprint         = "1410.4031",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CERN-PH-EP-2014-229",
+	SLACcitation   = "%%CITATION = ARXIV:1410.4031;%%",
+}
+
+%%% monotop
+
+
+@article{Aad:2015eha,
+	title          = "{Search for New Phenomena in Dijet Angular Distributions
+	in Proton-Proton Collisions at $\sqrt{s} = 8$ TeV Measured
+	with the ATLAS Detector}",
+	collaboration  = "ATLAS",
+	year           = "2015",
+	eprint         = "1504.00357",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CERN-PH-EP-2015-067",
+	SLACcitation   = "%%CITATION = ARXIV:1504.00357;%%",
+}
+
+@article{Khachatryan:2014cja,
+	collaboration         = "CMS",
+	title          = "{Search for quark contact interactions and extra spatial
+	dimensions using dijet angular distributions in
+	proton-proton collisions at sqrt(s) = 8 TeV}",
+	year           = "2014",
+	eprint         = "1411.2646",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	reportNumber   = "CMS-EXO-12-050, CERN-PH-EP-2014-261",
+	SLACcitation   = "%%CITATION = ARXIV:1411.2646;%%",
+}
+
+@article{D'Eramo:2014aba,
+	author         = "D'Eramo, Francesco and Procura, Massimiliano",
+	title          = "{Connecting Dark Matter UV Complete Models to Direct
+	Detection Rates via Effective Field Theory}",
+	journal        = "JHEP",
+	volume         = "1504",
+	pages          = "054",
+	doi            = "10.1007/JHEP04(2015)054",
+	year           = "2015",
+	eprint         = "1411.3342",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "UCB-PTH-14-38, UWTHPH-2014-27",
+	SLACcitation   = "%%CITATION = ARXIV:1411.3342;%%",
+}
