--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -5,13 +5,14 @@
 {$LastChangedBy: $}
 \svnid{$Id: $}   
 
-
 All models detailed in this Section are applicable to signatures where 
  a photon, a W boson, a Z boson or a Higgs boson
  is radiated from the initial state partons instead of a gluon. 
-The experimental signature is identified as \textit{V+\MET}.
+The experimental signature is identified as \textit{V+\MET} and it
+has been studied in Refs.~\cite{}.
 
-\Todo{Add link to section describing EW bosons from a blob.}
+\Todo{Add experimental citations.}
+\Todo{Add link to section describing EW bosons from a blob. CD: why here?}
 
 Monojet searches are generally more sensitive
 with respect to final states including bosons, due to the much
