--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -16,8 +16,7 @@ there is not yet any evidence for non-gravitational interactions
 between dark matter and Standard Model particles.  If such
 interactions exist, dark matter particles could be produced
 at the LHC. Since dark matter particles of themselves do not produce signals
-in the LHC
-detectors, one way to observe them is when they are produced in association
+in the LHC detectors, one way to observe them is when they are produced in association
 with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
 %% so simple pair-production of dark matter particles, for example,
 %% would
@@ -25,14 +24,14 @@ with a visible SM particle X(=$g, q, \gamma, Z, W$, or $h$).
 %% However, there are different mechanisms by which a
 %% could be produced in association with dark matter.
 Such reactions, which are
-observed as particles or jets recoiling against an invisible state, are
-called ``mono-X'' or \MET{}+X reactions.
+observed at colliders as particles or jets recoiling against an invisible state, are
+called ``mono-X'' or \MET{}+X reactions~\cite{Feng:2005gj,Beltran:2010ww,Bai:2010hh}.
+\Todo{CD: why singling out mono-Higgs?}
 This type of reaction includes the production of a Higgs boson that
 decays to pairs of dark matter particles.
 
-
 Early Run-1 searches for \MET{}+X signatures at ATLAS and CMS employed
-a basis of operators in 
+a basis of contact interaction operators in 
 effective field theories (EFTs) \cite{Goodman:2010yf,Goodman:2010ku} to
 calculate the possible signals.
 \Todo{Check these references here}
@@ -50,18 +49,17 @@ interaction approximation holds, these EFTs can also provide a
 straightforward way to compare the results from different collider
 searches with non-collider searches for dark matter.  
 
-
-The interpretation of some Run-1 LHC data as limits on contact interactions
+The interpretation of some Run-1 LHC searches as constraints on contact interactions
 provided results that were outside the range of applicability of the EFT
-description, requiring some thought on how to handle this situation \cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
-Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}
-of dark matter production
-were constructed with particles and interactions beyond the SM ones.
-These models can be used consistently at LHC energies,
-and make some different predictions than the EFTs.
+description, requiring further study~\cite{Bai:2010hh,Kopp:2011eu,Fox:2011fx,Fox:2011pm,Shoemaker:2011vi,Busoni:2013lha}.
+Some ``simplified models'' \cite{Alwall:2008ag,Goodman:2011jq,Alves:2011wf}\Todo{CD: How are those references chosen?}
+of dark matter production were constructed, including particles and interactions beyond the SM.
+These models can be used consistently at LHC energies, and provide
+an extension to the EFT approach. 
 Many proposals for such models have emerged (see, for example
-Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:2013xka,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba,Haisch:2015ioa}). 
-All of them introduce a new particle -- a mediator -- that allows
+Refs. \cite{An:2012va,An:2012ue,Tait:2013,Buchmueller:2013dya,Bai:2013iqa,Bai:2014osa,An:2013xka,Yavin:14092893,Malik:2014ggr,Harris:2014hga,Buckley:2014fba,Haisch:2015ioa,Bai:2012xg,Carpenter:2012rg,Bell:2012rg,Petrov:2013nia,Carpenter:2013xra}). 
+%TODO CD: MONSTERCITE! Probably should be split. 
+These model introduce a new particle -- a mediator -- that allows
 interactions between SM and DM particles.
 In the limit of large mediator mass, these simplified models map onto
 EFT operators.
@@ -78,10 +76,12 @@ If the mass of the mediator is light, the kinematics of the
 dark matter production can differ substantially from that due to a contact
 interaction, modifying limits and possibly requiring new search strategies.
 Appropriate simplified models can be used both to
-interpret mono-X searches and to guide the design of complementary
-searches for additional signatures.
+interpret Dark Matter searches at the LHC, and to guide the design of complementary
+search signatures.
 
-To understand what signal models should be used for Run 2, groups of experimenters from 
+\section{The ATLAS/CMS Dark Matter Forum}
+
+To understand what signal models should be used for the upcoming LHC Run 2, groups of experimenters from 
 both ATLAS and CMS collaborations have held separate discussions with small groups of
 theorists~\cite{Malik:2014ggr,Yavin:14092893}. 
 Another joint discussion was held at the DM@LHC workshop in Oxford, in 
@@ -93,7 +93,7 @@ and EFTs for Run-2 with the participation of experts on
 theories of dark matter. This is the final report of that forum.
 
 One of the guiding principles of this report is to channel the efforts
-of the ATLAS and CMS Collaboration towards a minimal set of dark
+of the ATLAS and CMS collaborations towards a minimal set of dark
 matter models that should influence the design of the early Run-2
 searches. At the same time, a thorough survey of realistic collider
 signals of dark matter is a crucial input to the overall design of the
@@ -127,7 +127,7 @@ important to narrow the scope and timescale to the following:
   interpretations.
 \item The forum should prepare a report summarizing these items,
   suitable both as a reference for the internal ATLAS and CMS
-  audiences and as an explanation for theory and non-collider
+  audiences and as an explanation of Run-2 benchmarks for theory and non-collider
   readers. This report represents the views of the participants of the
   forum.
 \end{enumerate}
@@ -157,73 +157,61 @@ heavily on a large body of existing theoretical work which made this
 assumption. Different types of dark matter particles will typically
 give similar results.
 Some exceptions exist:  the choice of Dirac fermions forbids some
-processes that are allowed for Majorana fermions.
+processes that are allowed for Majorana fermions~\ref{Goodman:2010yf}.
 Aside from this, the cases
 of Dirac or Majorana fermions or scalars produces only minor changes
 in the kinematic distributions of the visible particle, especially
 when considering cut-and-count\sidenote{Cut-and-count refers to an analysis
-that applies a certain event selection and checks the inclusive number of events which pass.   This is to be constrasted with a shape analysis that compares the distribution of events.} analysis. Thus the choice of Dirac
+that applies a certain event selection and checks the inclusive number of events which pass. 
+This is to be contrasted with a shape analysis that compares the distribution of events.} analysis. Thus the choice of Dirac
 fermion dark matter is deemed sufficient for the benchmarks aiding the
 design of the upcoming Run-2 searches. Nevertheless, a more complete
 set of models will certainly be required upon a discovery; see
 e.g.~\cite{Cotta:2012nj,Haisch:2013fla,Crivellin:2015wva} for some
 studies of observables that may distinguish amongst these models.
 
-The weakness of the interaction between dark matter and visible matter is explained
-by assuming a mediating force or particle that indirectly connects the
-two.  In the EFT approach, the mass scale of the mediator is assumed
-to be large compared to the typical momentum involved in the production
-of dark matter.   Since EFTs have been established for some time,
-we focus on 
-simplified models that allow the exploration of scenarios where the
-mediating scale is not so large.
-%because the EFT approach, viable for the
-%other types of dark matter searches, breaks down at the LHC. Another
-%way of viewing this problem is that any BSM model of dark matter
-%requires at least two particles: a dark matter candidate and a
-%mediator of the interaction between the dark matter and the Standard
-%Model.
-One strength of collider experiments lies in the ability to
+Simplified models are considered in depth within this report as a strength of collider experiments lies in the ability to
 study the mediator, not just the DM. A discovery of an
 anomalous \MET signature
 at the LHC would not uniquely imply discovery of dark matter, while at
 the same time discovery of an anomalous and annually-modulated signal
 in a direct-detection experiment would leave unanswered many questions
-about the nature of the interaction. These two approaches, and
-other types of non-collider searches, provide complementary ways to
-approach the problem, and it is in this spirit that our focus is on
+about the nature of the interaction that could be resolved by the simultaneous discovery
+of a new mediator particle. 
+Collider, direct and indirect detection searches provide complementary ways to
+approach this problem, and it is in this spirit that our focus is on
 the mediator. We systematically explore the basic possibilities for
 mediators of various possible spins and couplings.
-All models are assumed to produce a signature with pairs of dark matter particles.
+All models considered are assumed to produce a signature with pairs of dark matter particles.
 Though more varied and
 interesting possibilities are added to the literature almost daily,
 these basic building blocks account for much of the physics studied at
 hadron colliders in the past three decades.
 
-
 We also assume that Minimal Flavor Violation (MFV) \cite{Chivukula:1987py,Hall:1990ac,Buras:2000dm,D'Ambrosio:2002ex} applies to the
-recommended models. This means that the flavor structure of the
+models included in this report. This means that the flavor structure of the
 couplings between dark matter and ordinary particles follows the same
 structure as the Standard Model. This choice is simple, since no
 additional theory of flavor is required, beyond what is already
 present in the SM, and it provides a mechanism to ensure that the
 models do not violate flavor constraints.  As a consequence, spin-0
-resonances must have couplings to fermions proportional to the SM Higgs couplings. Flavor-safe models can still be constructed beyond the MFV
+resonances must have couplings to fermions proportional to the SM Higgs couplings. 
+Flavor-safe models can still be constructed beyond the MFV
 assumption, for example ~\cite{Agrawal:2014aoa}, and deserve further study.
 %cite Dolan:2014ska? Also DM@LHC report, if out in time. 
 
-In the parameter scan for the recommended models, we make the
+In the parameter scan for the models considered in this report, we make the
 assumption of a minimal decay width for the particles mediating the
 interaction between SM and DM.  This means that only decays
 strictly necessary for the self-consistency of the model (e.g.  to DM
 and to quarks) are accounted for in the definition of the mediator
 width. We forbid any further decays to other invisible particles of
-the Dark Sector that may increase the width or produce striking, visible signatures. Studies within the Forum
+the Dark Sector that may increase the width or produce striking, visible signatures. 
+Studies within the Forum
 show that, for cut-and-count analyses, the kinematic distributions of
 many models and therefore the sensitivity of the search do not depend
 significantly on the mediator width, as long as the width remains smaller
 than the mass of the particle.
-
 
 The particle content of the models chosen as benchmarks is limited to
 one single kind of DM whose self-interactions are not relevant for LHC
@@ -238,25 +226,53 @@ mediator particles), it is a starting point to prepare a set of
 distinct but complementary collider searches for Dark Matter, as
 it leads to benchmarks that are easily comparable across channels.
 
-%%TODO CD: rewrite this paragraph
-Contact interaction operators (EFTs) are also part of this report, 
-to be considered whenever neither a simplified model completion 
-nor other simplified models 
-yielding similar kinematic distributions are available. 
+\section{Choices of benchmarks considered in this report}
+
+%We have already said this above. 
+%carts in front of the horse?
+%The weakness of the interaction between dark matter and visible matter is explained
+%by assuming a mediating force or particle that indirectly connects the
+%two. In the EFT approach, the mass scale of the mediator is assumed
+%to be large compared to the typical momentum involved in the production
+%of dark matter.  
+Contact interaction operators have been outlined as a complete series of theoretical
+building blocks representing possible types of interactions between SM and DM particles
+in~\cite{Goodman:2010ku}. The approach followed by LHC searches (see e.g. Refs.~\ref{Khachatryan:2014rra,Aad:2015zva} 
+for the most recent jet+\MET{} Run-1 searches with the 8 TeV dataset) 
+so far has been to simulate only a prioritized set of the possible operators with distinct kinematics
+for the interpretation of the constraints obtained, and provide results to be reinterpreted in terms of the other operators.
+This report intends to follow this strategy, firstly focusing on simplified models that allow the exploration 
+of scenarios where the mediating scale is not as large.  
+%because the EFT approach, viable for the
+%other types of dark matter searches, breaks down at the LHC. Another
+%way of viewing this problem is that any BSM model of dark matter
+%requires at least two particles: a dark matter candidate and a
+%mediator of the interaction between the dark matter and the Standard
+%Model.
+Secondly, this report considers specific EFT benchmarks 
+whenever neither a simplified model completion 
+nor other simplified models yielding similar kinematic distributions are available. 
 This is the case for dimension 5-7 operators with direct 
 Dark Matter-electroweak boson couplings. 
-Model-independent results should be emphasized 
-in the signal regions that are unique to these models, 
-and results should be considered with the necessary caution due to EFT 
-validity issues covered in the last chapter of this report. 
-Results from these models may nevertheless help validate the 
-contact interaction limit of new simplified models developed to complete 
-these specific operators. 
+Considering these models as separate experimental benchmarks 
+will allow to target new signal regions and help validate the 
+contact interaction limit of new simplified models 
+developed to complete these specific operators. 
+
+In all cases, experimental searches should deliver 
+results that are independent from the specific benchmark tested. 
+Furthermore, it should be possible to map results from simplified models to contact operators,
+in the high mediator mass limit. Results from EFT benchmarks should include the condition that
+the momentum transfer does not probe the scale of the interaction; whenever there is no model
+that allows a direct mapping between these two quantities, various options should be tested to 
+ensure a given fraction of events within the range of applicability of the EFT approach.
+
+\section{Structure of this report}
 
 The first chapter of the report is dedicated to simplified
 models with radiation of a hard object either from the initial state
 or from the mediator. These models produce primarily monojet signatures, 
-but are recommended for all \MET{}+X searches.
+but should be considered for all \MET{}+X searches.
 Details of the implementation of these models in
 Monte Carlo generators are provided in
 Appendix \ref{app:MonojetLikeModels_Appendix}.
@@ -268,21 +284,18 @@ recommendations and choices for final states specifically containing an electrow
 boson ($W/Z/\gamma/H$). In this case, both
 simplified models leading to mono-boson signatures
 and contact interaction operators wherever simplified models are not available are considered. 
-The final chapter is devoted to the treatment of the validity of benchmark
+The final chapter is devoted to the treatment of the presentation of results for the benchmark
 models from contact interaction operators.
-The technical implementation and further models that can be studied
-beyond early searches are described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
 Appendix~\ref{app:Presentation_Of_Experimental_Results} contains the necessary elements that
 should be included in the results of experimental searches to allow for further reinterpretation. 
 %The Appendices also collect information about the implementation of the
 %models in event generator tools, as well as tables of expected cross sections.
 %%This could be saved for monotop
-%Appendix~\ref{app:ExtraModels} contains a series of models that produce interesting \MET{}+X signatures. 
-%These models are not specifically recommended by the Forum as they
-% deviate from the general assumptions made in this introduction. 
-%They have however been used in previous ATLAS and CMS analyses and discussed thoroughly within the Forum. 
-%They are therefore worth considering for early Run-2 searches, since they lead to unique signatures 
-%that are not produced by any other of the recommended models. 
+The technical implementation and further models that can be studied
+beyond early searches are described in Appendix~\ref{app:EWSpecificModels_Appendix}. 
+For these models, either the implementation could not be fully developed by the time of this report,
+or some of the grounding assumptions were not fully met.  
+Some of these models have been used in previous ATLAS and CMS analyses and discussed thoroughly within the Forum. 
+They are therefore worth considering for further studies and for Run-2 searches, since they lead to unique \MET{}+X signatures 
+that are not produced by any other of the models included in this report. 
 %\fi
-
-
