--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -8,12 +8,13 @@
 
 % preamble
 
-In this Chapter we review recommendations for
+In this Chapter we review 
 models that yield $X$+\MET{} signatures,
 where $X$ is a QCD parton or $\gamma, W, Z$ or $h$.
 While the recommendations are general,
 the discussions in this Chapter are focused on the monojet final state. 
-Details on final states with EW boson radiation and with heavy flavor quarks from diagrams arising within these models are also discussed in this Chapter.
+Details on final states with EW boson radiation and with heavy flavor quarks 
+from diagrams arising within these models are also discussed in this Chapter.
 %In the following paragraphs we present the peculiarities of these models that arise in the case of
 %boson radiation, and present some examples of the relevant distributions for these final states.
 These studies and those in subsequent sections are based on simulation of the models using the implementations recommended in Appendix~\ref{app:MonojetLikeModels_Appendix}. 
