--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -23,9 +23,10 @@ fermion% dropped after comments from Tom Rizzo and Uli Haisch
 %  RS KK gluon,for example. In these case, it is expcted that the most
 %  interesting mediator masses will be of order several TeV.}
 ; the
-mediating particle, labeled $\phi$, is charged and coloured; and the
+mediating particle, labeled $\phi$, is charged and colored; and the
 SM particle is a quark. Such models have been studied in
-Refs.~\cite{An:2013xka,Papucci:2014iwa}.  However, this model has not been studied extensively in this forum.
+Refs.~\cite{An:2013xka,Papucci:2014iwa,Bai:2013iqa,Tait:2013,Chang:2013oia,Bell:2012rg}. 
+However, this model has not been studied extensively in this forum.
 
 Following the example of Ref.~\cite{Papucci:2014iwa}, the interaction Lagrangian is written as
 
@@ -102,7 +103,7 @@ of $\chiDM$ is strongly dependent upon the Dirac fermion assumption.
 For a Majorana fermion, $q\bar q,\bar q\bar q,$ and $qq$ production
 would be possible with the latter having a pronounced enhancement
 at the LHC.
-\Todo{Get clarification of the case similar to a top squark}
+%\Todo{Get clarification of the case similar to a top squark -> will be later}
 
 This model is similar to the simplified model considered in SUSY searches, implemented as the MSSM with only light squarks and
 a neutralino, except for two distinct points:  the $\chiDM$ is
