--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -16,23 +16,40 @@ Effective Field Theories (EFTs)
 in the interpretation of DM searches at the LHC.
 Given our current lack of knowledge about the nature of a DM particle and
 its interactions, a model independent interpretation of the collider bounds
-appears mandatory.  This approach should be complemented with
-an interpretation within a choice of simplified models, which
+appears mandatory. This approach should be complemented with
+an interpretation within a choice of simplified models, which however
 cannot exhaust the set of possible completions of
-an effective Lagrangian.
-Even when the application of EFT is not appropriate for the prediction of kinematics or cross sections, it does predict specific final states and can motivate experimental searches.
+an effective Lagrangian. 
+Even though the EFT requires an assessment of the conditions that define its applicability, 
+results provided using of a single simplified model at a time do not
+characterize the full breadth of an EFT that can represent results for many completions at once.  
+In some cases, such as composite WIMPs~\cite{}, 
+\Todo{CD: Asked Tim for reference}
+the contact interaction framework is the correct one to constrain new confinement scales. 
+
+%Even when the application of EFT is not appropriate for the prediction of kinematics 
+%or cross sections, it does predict specific final states and can motivate experimental searches.
 
 One problem that has arisen is the attempt to derive a limit on
 nucleon-dark matter scattering cross sections based on collider data.
-Experiments that directly probe the nucleon-dark matter scattering cross section are testing the regime of small momentum transfers, where the EFT approach is valid.  Collider experiments are sensitive to large momentum transfers, and it is problematic to interpolate an EFT result from high to low momentum.  This is a regime where careful treatment is necessary.
-
+Experiments that directly probe the nucleon-dark matter scattering cross section 
+are testing the regime of small momentum transfers, where the EFT approximation always holds.  
+Collider experiments are sensitive to large momentum transfers: This is a regime where careful 
+treatment is necessary since the condition of applicability of the EFT may not hold~\footnote{
+Furthermore, mapping EFT results from high to low momentum requires particular care for some of the operators, 
+see Ref.~\ref{D'Eramo:2014aba} for a thorough discussion.}.
 
 %As we have learned, EFTs do not truly represent a model-independent representation of the data for the current collider sensitivity.
-Ideally, experimental results would be cast into bounds of allowed signal events in different kinematic regions.   Until this is done systematically by the analyses, we present
-several prescriptions in the literature
-that can be used to quote bounds on EFT operators.
+Ideally, experimental results should be cast into bounds of allowed signal events in the kinematic regions considered for 
+the search, as detailed in Appendix~\ref{app:Presentation_Of_Experimental_Results}. 
+Constraints comparing different experiments should be expressed as a function of the model parameters 
+rather than on related observables, where the complementarity still be manifest, although this is a point
+that should be developed further after the conclusion of the work of this Forum. 
+Analyses should do this systematically; until that is done, results can be presented using one 
+of the several prescriptions in the literature~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}. 
+that can be used to quote bounds on EFT operators. 
 
-For the uninitiated, we illustrate the problem that can arise with EFTs at colliders by considering an effective interaction
+We first illustrate the problem that can arise with EFTs at colliders by considering an effective interaction
 $$ (\bar\psi\psi)(\bar\chiDM\chiDM) {g\over \Lambda^2}$$
 that couples SM and DM fields.   The strength of this interaction can
 be parametrized by $\displaystyle f={g\over \Lambda^2}$.
@@ -53,17 +70,19 @@ is assumed so that the full kinematic region can be used, a large value of
 $g$ is required, raising the question if perturbation theory
 is even applicable.     
 
-Here we summarize some methods that can be used to
-improve the reliability of the EFT approximation. These methods are described in detail in Refs.~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}.   We then propose a recommendation for the presentation of EFT results for Run-2 LHC benchmarks.
+In the first part of this Section, we summarize some methods that can be used to
+improve the reliability of the EFT approximation. These methods are described in detail in Refs.~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa,Berlin:2014cfa}. 
+We then propose a recommendation for the presentation of EFT results for early Run-2 LHC searches.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\texorpdfstring{Outline of the procedure described in Refs.~\cite{Busoni:2014sya,Aad:2015zva}}{Outline of the procedure described in Refs.}}
 \label{sec:TruncationWithQTr}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-A standard approach has been to consider a simplified model and work backwards to determine the validity of the EFT approximation.
-For a tree-level interaction between DM and the Standard Model (SM) via some mediator with mass \mMed, the EFT approximation corresponds to
-expanding the propagator for the mediator
+A standard approach has been to consider a simplified model and use the connection that the model provides between
+mediator mass and scale of the interaction to determine the validity of the EFT approximation.
+For a tree-level interaction between DM and the Standard Model (SM) via some mediator with mass \mMed, 
+the EFT approximation corresponds to expanding the propagator for the mediator
 in powers of $\Qtr^2/\mMed^2$, truncating at lowest order, and combining the remaining parameters into a single parameter \Mstar (also called $\Lambda$ in the literature).
 For an example scenario with a \Zprime-type mediator (leading to some combination of operators D5 to D8 in the EFT limit)
 this corresponds to setting
@@ -81,10 +100,9 @@ In this framework, there are three regions to consider:
 \end{itemize}
 
 We can use the condition $\Qtr^2 < M^2 = \gDM \gq {\Mstar}^2$ to restrict the
-kinematics of the signal
-and improve the reliability of the validity of the EFT approximation (after the imposition of the event selection of the analysis).  This truncated signal can then be used to derive the new, truncated limit on $\Mstar$ as a function of $(\mDM, \gDM \gq)$.
-\Todo{I am uncomfortable with saying ``ensure the validity.''}
-
+kinematics of the signal and remove events for which the high-mediator-mass approximation made in the EFT would not be reliable.
+This leads to a smaller effective cross-section, after imposing the event selection of the analysis.  This truncated signal can then be used to derive a new, more conservative limit on $\Mstar$ as a function of $(\mDM, \gDM \gq)$.
+%TODO SM: I am uncomfortable with saying ``ensure the validity.'' CD: me too. However "improve the reliability of the validity" is cumbersome so I changed it.
 
 For the example D5-like operator, $\sigma \propto {\Mstar}^{-4}$, and so there is a simple rule for converting a rescaled cross section into a rescaled constraint on ${\Mstar}$ if the original limit is based on a simple cut-and-count procedure. Defining $\sigma_{\rm EFT}^{\rm cut}$ as the cross section truncated such that all events pass the condition $\sqrt{\gDM \gq} \Mstar^{\rm rescaled} > \Qtr$, we have
  
@@ -94,8 +112,19 @@ For the example D5-like operator, $\sigma \propto {\Mstar}^{-4}$, and so there i
 %
 which can be solved for $\Mstar^{\rm rescaled}$ via either iteration or a scan.
 %(note that $\Mstar^{\rm rescaled}$ appears on both the LHS and RHS of the equation).
-Similar relations exist for a given UV completion of each operator. The details and application of this procedure to ATLAS results can be found in Ref.~\cite{Aad:2015zva} for a range of operators. Since this method uses the physical couplings and energy scale $\Qtr$, it gives the strongest possible constraints in the EFT limit while remaining robust by ensuring the validity of the EFT approximation.
-\Todo{Too strong of a statement?}
+Similar relations exist for a given UV completion of each operator. The details and application of this procedure to ATLAS results can be found in Ref.~\cite{Aad:2015zva} for a range of operators. Knowledge of the UV completion for a given is necessary for this procedure; this introduces a model-dependence that was not present in the not-truncated EFT results. 
+
+
+%You argued (well, reported on an argument) that the use of the EFT somehow is a barrier to collider searches being appreciated by colleagues who work on other detection strategies.  Of course, I do not know what the future will hold under any scenario, but I strongly believe that the rejection of the collider bounds is based entirely on politics by the direct detection community, who feels threatened that it weakens their designs to expand to lower mass.  Of course, so far they are getting funding to do that anyway, so they should not feel threatened, but they do not want the competition.
+%
+%My prediction is that by going from an EFT to a simplified model, the response from colleagues in other fields will be that the mapping is (self-evidently) model-dependent, and therefore they do not want to include it since it is at odds with their “direct” limits.  This objection is essentially false in the sense that even when they compare one experiment to each other, it is model-dependent, but it is true that the model is more manifestly important here.
+%
+%I think the better strategy is going to be to use the language of the models (rather than observables) as the comparison point.  This will be much less political, and it can turn into a limit from each experiment on the cut-off scale as a function of mass for the EFT, or masses and couplings in a given simplified model.  The complementarity of experiments will be manifest there, but no one will need to feel territorial about their own turf.
+%
+%I also object to framing the discussion of the EFT as a discussion of “validity”.  The EFT is valid only as a proxy for a given model, and to ask the question as just the EFT being valid or invalid at the LHC is a question without any meaningful well-defined answer.  To ask how well it does requires one to know the model that describes higher energies, and this is a case where we don’t have that information — which is the point!  I appreciate that what you are advocating to do in practice is the correct thing (and what I have also advocated for all along), but to frame it as a question of validity of the LHC results on EFTs is very misleading and contributes ammunition to those people such as the one I mentioned before who are very confident shouting about things they do not understand.
+ 
+%Since this method uses the physical couplings and energy scale $\Qtr$, it gives the strongest possible constraints in the EFT limit while remaining robust by ensuring the validity of the EFT approximation.
+\Todo{Too strong of a statement? CD: more like - I don't think this parses. Rewritten.}
 
 If a search is not simply a counting experiment and exploits the shapes of kinematic distributions, the condition on the momentum transfer should be applied on the benchmarks using generator level information, by discarding events that are invalid. This provides the necessary rescaling of the cross section while keeping the information on the change in the kinematic distributions due to the removal of the invalid events. 
 
@@ -146,19 +175,18 @@ In this report we recommend two strategies for the presentation of results
 in terms of Effective Field Theories. We divide the EFT operators in two categories: 
 those which can be mapped to one or more UV-complete simplified models, such as those
 commonly used in LHC searches so far and detailed in~\cite{Goodman:2010ku}, and those
-for which no UV completion is available, such as those outlined in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}. Results for the first class
-of operators can be recast using simplified models with high mediator masses, therefore removing
-the need to explicitly simulate EFT events and provide experimental limits
+for which no UV completion is available, such as those outlined in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}. The For the first case, the EFT is supposed to cover the cases where the mediating particles are heavy,
+thus overlapping with the simplified models outlined in this report.
+Results for this first class of operators can be recast starting from simplified models with high mediator masses, 
+therefore removing the need to explicitly simulate EFT events but still effectively providing experimental limits
 for those operators. For the second class of models, a truncation procedure 
-should be applied and the truncated results should be presented alongside 
-the naive EFT results.
+should be applied for various hypotheses on the validity of the EFT in question, 
+and the truncated results presented alongside the full EFT results.
 
-Three proposals for the treatment of EFT have been stated so far:
-(1) truncate using \Qtr, (2) truncate and iterate using \Qtr, and
-(3) truncate using \Ecm.   Another possibility is to
-present the raw EFT results, but qualify that they might not be
-valid.  Finally, one can quantify the validity of the EFT result
-by presenting the sensitivity to \Reft, the fraction of events
+Three proposals for the treatment of EFT have been stated so far,
+to complement raw EFT results: (1) truncate using \Qtr, (2) truncate and iterate using \Qtr, and
+(3) truncate using \Ecm.  The reliability of the EFT approximation can
+also be quantified by presenting the sensitivity of the results to \Reft, the fraction of events
 that satisfy $\hat{s} > \Mcut ^2$, for example.
 
 \section{Recommendation for contact interaction theories with simplified models available}
@@ -174,27 +202,28 @@ Taken from Ref.\,\cite{ATL-PHYS-PUB-2014-007}.}
 If a simplified model can be mapped to a given EFT, then the model's high-mediator-mass limit 
 will converge to the EFT. This can be seen in Fig.~\ref{fig:monojet_MstarMmed}, where the limits on 
 the scale of the interaction of a \Zprime-like simplified model are presented in terms of the mediator mass~\footnote{This plot only serves as exemplification of the convergence of the simplified model to a contact
-	interaction operator: before this Report, ATLAS and CMS searches presented search results up to very high couplings and therefore high widths, potentially probing unphysical corners of phase space}. 
+	interaction operator: before this report, ATLAS and CMS searches presented search results up to very high couplings and therefore high widths, potentially probing unphysical corners of phase space}. 
 The limits at high mediator mass for this model are equivalent to those of the corresponding EFT benchmark. 
 For this reason, experimental collaboration should deliver results for high-mass mediators instead of 
 pure EFT results, and leave further reinterpretation to theorists.
 \Todo{The extrapolation to other couplings and mediator masses can be
-done using the \Qtr prescription for that model.}
+done using the \Qtr prescription for that model. CD: I think this was Steve M - what do you mean?}
 
-We therefore recommend the addition of one point at very high mediator mass (5 \tev) to the scan, for each of the DM masses for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose. Studies are ongoing for $s-$channel vector mediators. 
+We therefore recommend the addition of one point at very high mediator mass (5 \tev) to the scan, for each of the DM masses for the simplified models described in Section~\ref{subsec:MonojetLikeModels}. The truncation procedure in Section~\ref{sec:TruncationWithSHat} can be used to fine-tune the mediator mass to be simulated for this purpose. 
 
-%\Todo{Is this sufficient information for reinterpretation, or should we have instructions?}
+\Todo{Add studies by Cora Fischer}
 
-\section{Recommendation for truncation of theories with no simplified models available}
+\section{Recommendation for truncation of EFT benchmarks with no simplified models available}
 
 Whenever a UV completion is not available, EFT results can still
 be a source of useful information as 
 described in Section~\ref{sub:validityEWContact}. 
-However, we can only naively control the validity of the EFT operator.
+However, we can only naively control how well the EFT approximation holds.
 Despite the fact that a propagator was introduced to motivate
 the truncation procedure for \schannel models, the prescription
-is only dependent upon the simplified model to derive the
-energy scaling.   The simple fact remains that the effective
+depends upon the simplified model to derive the
+energy scaling that is used for the comparison with the momentum transfer. 
+The simple fact remains that the effective
 coupling of the operator -- $g/\Lambda^n$ -- should not allow
 momentum flow $Q>\Lambda$ or $g>4\pi$.  Given our ignorance of
 the actual kinematics, 
@@ -217,7 +246,7 @@ exclusion limits for the chosen acceptance.
 
 We propose a rough scan over \Mcut, such that we find the values of \Mcut 
 for which \Reft ranges from 0.1 to 1. The analysis can then perform a scan over 
-several values of \Mcut \Todo{agree on how many?}, and show the truncated limit 
+several values of \Mcut, and show the truncated limit 
 for each one of them alongside the naive limit corresponding to $\Reft=1$. 
 
 %When \Reft=0, there is no limit. When \Reft reaches 1, the truncated limit 
