1 extra ref for Regina Caputo's comments.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@286 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2210,3 +2210,19 @@
 	reportNumber   = "UCB-PTH-14-38, UWTHPH-2014-27",
 	SLACcitation   = "%%CITATION = ARXIV:1411.3342;%%",
 }
+
+@article{Calore:2014xka,
+      author         = "Calore, Francesca and Cholis, Ilias and Weniger,
+                        Christoph",
+      title          = "{Background model systematics for the Fermi GeV excess}",
+      journal        = "JCAP",
+      volume         = "1503",
+      pages          = "038",
+      doi            = "10.1088/1475-7516/2015/03/038",
+      year           = "2015",
+      eprint         = "1409.0042",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      reportNumber   = "FERMILAB-PUB-14-289-A",
+      SLACcitation   = "%%CITATION = ARXIV:1409.0042;%%",
+}
