Some more comments implemented from Johanna Gramling.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@287 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -455,7 +455,7 @@ The presentation of the results in the $\gq$--$\gDM$ plane for fixed masses bene
 
 In this section, we consider a parallel situation to the \modelDMV and \modelDMA mediators in the previous sections: a real scalar or a pseudoscalar where the associated scalar is decoupled at higher energies\sidenote{This assumption does not hold in a UV-complete model where the two components of the complex scalar mediator would be approximately degenerate.  The complex scalar case could be studied separately in the case of heavy flavor final states given the sufficiently different kinematics.}. This section is largely based on Refs.~\cite{Buckley:2014fba,Harris:2014hga} which contain a thorough discussion of these models. 
 
-With the MFV assumption,
+Assuming MFV,
 spin-$0$ resonances behave in a similar fashion as the SM Higgs boson. Relative to the \modelDMV and \modelDMA discussed above, these \modelDMS and \modelDMP models are distinguished by the special consequences of the MFV assumption, the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically available, and the loop-induced coupling to gluons. The interaction Lagrangians are
 
  \begin{eqnarray}
@@ -469,7 +469,7 @@ spin-$0$ resonances behave in a similar fashion as the SM Higgs boson. Relative 
 i\gdm a \bar{\chiDM}\gamma_5\chiDM+ \frac{i a}{\sqrt{2}}\sum_i  \left(g_u y_i^u \bar{u}_i \gamma_5 u_i+g_d y_i^d \bar{d}_i \gamma_5 d_i+ \right. \nonumber \\
 & & \left. g_\ell y_i^\ell   \bar{\ell}_i \gamma_5 \ell_i\right) \,. \label{eq:pseudoscalarlag}
 \end{eqnarray}
-where the Yukawa couplings $y_i^f$ are normalized to the Higgs vev as $y_i^f = \sqrt{2}m_i^f/v$. 
+where $\phi$ and $a$ are respectively the scalar and pseudoscalar mediators, and the Yukawa couplings $y_i^f$ are normalized to the Higgs vev as $y_i^f = \sqrt{2}m_i^f/v$.
 
 The couplings to fermions are proportional to the SM Higgs couplings, yet one is still allowed to adjust an overall strength of the coupling to charged leptons and the relative couplings of $u$- and $d$-type quarks. As in the preceding sections, for the sake of simplicity and straightforward comparison, we reduce the couplings to the SM fermions to a single universal parameter $\gq \equiv g_u = g_d = g_\ell$.\sidenote{The contribution from $\tau^+\tau^-$ decays plays no role for most of the parameter space considered.}
 The relative discovery and exclusion power of each search can be compared in this framework.
@@ -603,7 +603,7 @@ For the mediator mass above twice the top quark mass $m_t$, the minimal width re
 \end{figure}
 
 It can be seen in Fig.~\ref{fig:monojet_SPmodels} that the kinematics for the scalar and pseudoscalar models coincides when considering the diagrams in Fig.~\ref{fig:feyn_prod_S}. 
-For this reason, we recommend to only generate only one of the two models.
+For this reason, we recommend to generate only one of the two models.
 %, and report the cross-sections on HEPData 
 \Todo{Clarify shape of model repository}
 %for the other one.
