--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -11,7 +11,7 @@
 % and http://arxiv.org/abs/arXiv:1409.2893
 
 The preceding sections address models with a Dirac fermion coupled to
-the SM through exchange of a neutral spin-0 or spin-1 in an
+the SM through exchange of a neutral spin-0 or spin-1 particle in an
 \schannel process.  A \tchannel process may couple the SM and DM
 directly, leading to a different phenomenology.
 For completeness, we examine a
@@ -76,7 +76,7 @@ in the limit $M_{\phi_i}, \mDM \gg m_{u_i}$.
 %% while it could be wider in case of large \mDM, leading to different kinematic distributions between
 %% the two kinds of benchmarks. 
 
-The leading-order processes involved in MET+jet production are shown
+The leading-order processes involved in \MET{}+jet production are shown
 in Fig. \ref{fig:tchannelMonojet}.
 Note that the generation index for $\phi$ is linked to the incoming
 fermion(s), and it runs on all three quark generations due to 
@@ -351,7 +351,7 @@ recommend adopting the \schannel mono-jet grid.
 %on the coupling through the effect on the minimal
 %mediator width. 
 In contrast to the \schannel case, the
-bounds one obtains from X+MET searches depends strongly on the width
+bounds one obtains from \MET{}+X searches depend strongly on the width
 of the mediator, as is visible in Figs.~5 and 6 of
 Ref.~\cite{Papucci:2014iwa}, except in the heavy mediator limit ($\Mphi \approx 2$\,TeV). 
 %In the heavy mediator limit, the rates of the first three diagrams of
