--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -13,7 +13,7 @@ The model predicts not only
 the monojet process described in Section~\ref{sec:monojet_scalar}, but also production of dark matter
 in association with top (or bottom) pairs, as illustrated in Fig.~\ref{fig:TTbarPhi}. 
 Dedicated searches including jets from heavy flavor quarks in the final state
-can be designed for this production mechanism. Another class of simplified models,  
+can be designed for this signature. Another class of simplified models,  
 which includes a Dark Matter interpretation among many others, and yields a single
 top quark in the final state, is detailed in Appendix~\ref{sec:singletop}. 
 
@@ -99,7 +99,7 @@ In some theoretically motivated scenario (e.g. for high $tan\beta$ in 2HDM in th
 spin-0 mediators might couple more strongly to down generation quarks.
 This assumption motivates the study of final states involving $b$-quarks 
 as a complementary search to the $t\bar
-t$+DM models presented in the previous section, to directly probe the $b-$ quark coupling. 
+t$+DM models, to directly probe the $b$-quark coupling. 
 In addition to the example illustrated in Fig.~\ref{fig:TTbarPhi}, an example of such a model can be found in Ref.~\cite{Buckley:2014fba}.
 Note that, because of the kinematics features of $b$ quark production relative
 to heavy $t$ quark production, a $b\bar b$+DM final state may only yield one
@@ -111,7 +111,7 @@ experimentally visible $b$ quark, leading to a mono-$b$ signature in a model tha
 %mediators lead to quark mass dependent Yukawa couplings and therefore dominant couplings to top quarks.
 
 The parameter scan for the dedicated $t\bar{t}$+\MET{} searches has been studied in detail to target the production 
-mechanism of DM associated to heavy flavor quarks, still sharing many details of the scan for the scalar model with a gluon radiation 
+mechanism of DM associated with heavy flavor quarks, still sharing many details of the scan for the scalar model with a gluon radiation 
 The benchmark points scanning the model parameters have been selected to ensure that the kinematic features of the 
 parameter space are sufficiently represented. Detailed studies were performed to identify points in the \mdm, 
 $m_{\phi,a}$, $\gDM$, $\gq$ (and $\Gamma_{\phi,a}$) parameter space that differ significantly from each other 
@@ -120,15 +120,15 @@ mediator $p_{T}$ spectra is taken to represent the main kinematics of a model. A
 of benchmarks is to focus on the parameter space where we expect the searches to be sensitive during the 2015 LHC run. 
 Based on a projected integrated luminosity of $30\,{\rm fb}^{-1}$ expected for 2015, we disregard model points with a 
 cross section times branching ratio smaller than $0.1\,{\rm fb}$, corresponding to a minimum of one expected event 
-assuming a conservative 0.1\% signal efficiency. 
+assuming a 0.1\% signal efficiency. 
 
 The kinematics is most dependent on the masses \mdm and $m_{\phi,a}$. Figure~\ref{fig:scanPhi} 
 and~\ref{fig:scanPhiPseudo} show typical dependencies for scalar and pseudoscalar couplings respectively.
-Typically, the mediator $p_T$ spectra broadens with larger $m_{\phi,a}$. 
+Typically, the mediator $p_T$ spectrum broadens with larger $m_{\phi,a}$. 
 The kinematics are also different between on-shell ($\mMed>2\mdm$) and off-shell ($\mMed<2\mdm$) mediators as discussed in Section~\ref{sec:monojet_scalar}. 
-Furthermore, the kinematic differences in \MET{} spectrum between scalar and pseudoscalar are larger for light mediator 
+Furthermore, the kinematic differences in the \MET{} spectrum between scalar and pseudoscalar are larger for light mediator 
 masses with respect to heavier mediators. It is therefore important to  
-benchmark points covering on-shell and off-shell mediators with sufficient granularity, including the
+choose benchmark points covering on-shell and off-shell mediators with sufficient granularity, including the
 transition region between on-shell and off-shell mediators. %, as inFig.~\ref{fig:scanPhidiag}. 
 
 \begin{figure}[!ht]
@@ -155,7 +155,7 @@ transition region between on-shell and off-shell mediators. %, as inFig.~\ref{fi
 %\end{center}
 %\end{figure}
 
-Typically only weak dependencies on width or equivalently couplings are observed (see Fig~\ref{fig:widthsmallscan}), except for large mediator masses of $\sim 1.5\,{\rm TeV}$ or for very small couplings of $\sim 10^{-2}$. These regimes where width effects are significant have production cross sections that are too small to be relevant for $30\,{\rm fb}^{-1}$ and are not considered here. However, with the full Run-2 dataset, such models may be within reach. The weak dependence on the typical width values can be understood as the parton distribution function are the dominant effect on mediator production. As shown in Section~\ref{sub:parameter_scan_monojet}, for couplings $\sim O(1)$ the width is large enough that the $p_T$ of the mediator is determined mainly by the PDF.
+Typically only weak dependencies on width or equivalently couplings are observed (see Fig~\ref{fig:widthsmallscan}), except for large mediator masses of $\sim 1.5\,{\rm TeV}$ or for very small couplings of $\sim 10^{-2}$. These regimes where width effects are significant have production cross sections that are too small to be relevant for $30\,{\rm fb}^{-1}$ and are not considered here. However, with the full Run-2 dataset, such models may be within reach. The weak dependence on the typical width values can be understood as the parton distribution function having the dominant effect on mediator production. As shown in Section~\ref{sub:parameter_scan_monojet}, for couplings $\sim O(1)$ the width is large enough that the $p_T$ of the mediator is determined mainly by the PDF.
 
 \begin{figure}[!ht]
   \begin{center}
