--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -10,7 +10,7 @@ This model produces an annihilation cross section consistent with the gamma-ray 
 that has perturbative values for the couplings and is
 consistent with LHC constraints on the colored mediator.
 For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter 
-coupling preferentially to $b-$ quarks, the model predicts a direct detection cross section that is consistent 
+coupling preferentially to $b$-quarks, the model predicts a direct detection cross section that is consistent 
 with current constraints, but within the near future reach of Direct Detection experiments and of the
 upcoming LHC run. 
 %The model will be decisively tested with data from the upcoming high-energy run at the LHC. 
@@ -35,7 +35,7 @@ The Lagrangian considered is given by
 
 \paragraph{Parameter scan}
 
-The nature of the model is not conducive to a simple scaling behavior that would allow us reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^2_s$) with diagrams that are proportional to the coupling $g$ in the $b+$\MET{} and $b\bar{b}$+\MET{} final states. Fixing the couplings also fixes the mediator width, when adopting the minimal width assumption. 
+The nature of the model is not conducive to a simple scaling behavior that would allow us to reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^2_s$) with diagrams that are proportional to the coupling $g$ in the $b+$\MET{} and $b\bar{b}$+\MET{} final states. Fixing the couplings also fixes the mediator width, when adopting the minimal width assumption. 
 
 A full study of the parameter scan for this model was not available for this report; thus we recommend scanning a range of  possible widths as discussed in a more-limited way for the \schannel mono-jet, spanning from the minimal width to a value approaching the particle limit, e.g. $g=0.5,1,2,3$. A coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion): Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. The coupling could also be chosen to fulfill constraints from the relic density (see Appendix~\ref{app:Relic_Density_bFDM}, with corresponding cross sections in Tables~\ref{tab:g_relic_13T} onwards). 
 
